--- a/index.html
+++ b/index.html
@@ -1,310 +1,146 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Dynamic Aviation Group, Inc — Game Studio</title>
-    <meta name="description" content="Dynamic Aviation Group, Inc — indie game studio specializing in casual & narrative games. Contact: mean.dfvqw@gmail.com" />
-    <style>
-        :root {
-            --accent: #1766d1;
-            --muted: #6b7280;
-            --card: #ffffff;
-            --bg: linear-gradient(180deg,#0f1724 0%, #0b1220 100%);
-            --maxw: 1100px;
-            --radius: 12px;
-            --glass: rgba(255,255,255,0.03);
-        }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="LiGame — Creating games that move people. Original game studio focused on narrative, AI and immersive gameplay." />
+  <title>LiGame — Creating games that move people</title>
 
-        html, body {
-            height: 100%;
-            margin: 0;
-            font-family: Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
-        }
+  <!-- Minimal, dependency-free styling -->
+  <style>
+    :root{
+      --bg:#0f1724;      /* dark-blue background */
+      --card:#0b1220;    /* section background */
+      --muted:#9aa4b2;
+      --accent:#7dd3fc;  /* light cyan accent */
+      --glass: rgba(255,255,255,0.04);
+      --maxw: 980px;
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      color-scheme: dark;
+    }
 
-        body {
-            background: var(--bg);
-            color: #e6eef8;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            display: flex;
-            justify-content: center;
-            padding: 40px 20px;
-        }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background:linear-gradient(180deg,var(--bg) 0%, #071021 100%);
+      color:#e6eef6;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      line-height:1.5;
+      padding:32px 20px;
+      display:flex;
+      justify-content:center;
+      font-size:16px;
+    }
 
-        .wrap {
-            width: 100%;
-            max-width: var(--maxw);
-        }
+    .container{
+      width:100%;
+      max-width:var(--maxw);
+    }
 
-        header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 20px;
-            margin-bottom: 28px;
-        }
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
+      margin-bottom:28px;
+    }
 
-        .brand {
-            display: flex;
-            gap: 14px;
-            align-items: center;
-        }
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      text-decoration:none;
+      color:inherit;
+    }
 
-        .logo {
-            width: 64px;
-            height: 64px;
-            border-radius: 12px;
-            background: linear-gradient(135deg,var(--accent),#0ea5a1);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.45);
-            font-family: monospace;
-        }
+    .logo{
+      width:48px;
+      height:48px;
+      border-radius:10px;
+      background:linear-gradient(135deg,var(--accent), #60a5fa);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:700;
+      color:#022;
+      box-shadow:0 6px 18px rgba(7,18,36,0.6), inset 0 -6px 12px rgba(255,255,255,0.02);
+      flex-shrink:0;
+    }
 
-        h1 {
-            font-size: 20px;
-            margin: 0
-        }
+    nav a{
+      color:var(--muted);
+      text-decoration:none;
+      margin-left:18px;
+      font-size:0.95rem;
+    }
+    nav a:hover{ color:var(--accent); }
 
-        .tag {
-            color: var(--muted);
-            font-size: 13px;
-            margin-top: 4px
-        }
+    main{
+      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border-radius:14px;
+      padding:28px;
+      box-shadow: 0 10px 30px rgba(2,6,23,0.6);
+      backdrop-filter: blur(6px);
+    }
 
-        nav a {
-            color: #cfe8ff;
-            text-decoration: none;
-            margin-left: 18px;
-            font-weight: 600
-        }
+    .hero{
+      display:grid;
+      grid-template-columns:1fr;
+      gap:18px;
+      align-items:center;
+      margin-bottom:24px;
+    }
 
-            nav a:hover {
-                text-decoration: underline
-            }
+    .eyebrow{
+      font-size:0.9rem;
+      color:var(--accent);
+      letter-spacing:0.06em;
+      text-transform:uppercase;
+      font-weight:600;
+    }
 
-        main {
-            display: grid;
-            grid-template-columns: 1fr 360px;
-            gap: 24px;
-            align-items: start;
-        }
+    h1{
+      margin:0;
+      font-size:clamp(26px, 4.4vw, 36px);
+      line-height:1.05;
+      letter-spacing:-0.02em;
+    }
 
-        .card {
-            background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
-            border-radius: var(--radius);
-            padding: 26px;
-            box-shadow: 0 8px 30px rgba(2,6,23,0.6);
-            border: 1px solid rgba(255,255,255,0.04);
-        }
+    p.lead{
+      margin:0;
+      color:var(--muted);
+      font-size:1.03rem;
+    }
 
-        .hero {
-            padding: 36px;
-            border-radius: 14px;
-            display: flex;
-            flex-direction: column;
-            gap: 16px
-        }
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+      gap:20px;
+      margin-top:18px;
+    }
 
-            .hero h2 {
-                margin: 0;
-                font-size: 28px;
-                color: #fff
-            }
+    .card{
+      background:var(--card);
+      border-radius:12px;
+      padding:18px;
+      box-shadow: 0 6px 18px rgba(2,6,23,0.5);
+      min-height:120px;
+    }
 
-            .hero p {
-                margin: 0;
-                color: var(--muted);
-                line-height: 1.6
-            }
+    .card h3{ margin:0 0 8px 0; font-size:1.05rem; }
+    .muted{ color:var(--muted); font-size:0.95rem; }
 
-        .features {
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            gap: 14px;
-            margin-top: 18px
-        }
+    footer{
+      margin-top:22px;
+      padding-top:12px;
+      border-top:1px solid rgba(255,255,255,0.03);
+      color:var(--muted);
+      font-size:0.9rem;
+      text-align:center;
+    }
 
-        .feature {
-            background: var(--glass);
-            padding: 14px;
-            border-radius: 10px;
-            border: 1px solid rgba(255,255,255,0.03)
-        }
-
-            .feature h3 {
-                margin: 0;
-                font-size: 15px
-            }
-
-            .feature p {
-                margin: 6px 0 0;
-                color: var(--muted);
-                font-size: 13px
-            }
-
-        .side .contact {
-            display: flex;
-            flex-direction: column;
-            gap: 12px
-        }
-
-        .muted {
-            color: var(--muted);
-            font-size: 13px
-        }
-
-        .btn {
-            background: var(--accent);
-            color: white;
-            padding: 10px 14px;
-            border-radius: 10px;
-            display: inline-block;
-            text-decoration: none;
-            font-weight: 700;
-            margin-top: 8px;
-            box-shadow: 0 8px 20px rgba(23,102,209,0.18);
-            border: 1px solid rgba(255,255,255,0.03);
-        }
-
-        .games-list {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-            margin-top: 16px
-        }
-
-        .game {
-            background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-            padding: 12px;
-            border-radius: 10px;
-            border: 1px solid rgba(255,255,255,0.03);
-        }
-
-        footer {
-            margin-top: 28px;
-            color: var(--muted);
-            font-size: 13px;
-            text-align: center
-        }
-
-        @media (max-width:980px) {
-            main {
-                grid-template-columns: 1fr;
-            }
-
-            .side {
-                order: 2
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="wrap">
-        <header>
-            <div class="brand">
-                <div class="logo">DAG</div>
-                <div>
-                    <h1>Dynamic Aviation Group, Inc</h1>
-                    <div class="tag">Game Studio — Casual · Narrative · Mobile & PC</div>
-                </div>
-            </div>
-
-            <nav aria-label="Main navigation">
-                <a href="#about">About</a>
-                <a href="#games">Games</a>
-                <a href="#services">Services</a>
-                <a href="#contact">Contact</a>
-            </nav>
-        </header>
-
-        <main>
-            <section class="card hero" id="about" aria-labelledby="about-title">
-                <h2 id="about-title">Who we are</h2>
-                <p>
-                    Dynamic Aviation Group, Inc is an independent game studio focused on crafting
-                    elegant casual games and immersive narrative experiences for mobile and PC.
-                    We combine clean design, tight gameplay and thoughtful storytelling to create
-                    products that players love.
-                </p>
-
-                <div class="features" aria-hidden="false">
-                    <div class="feature">
-                        <h3>Casual Games</h3>
-                        <p>Polished mechanics, short-session loops and strong retention design.</p>
-                    </div>
-                    <div class="feature">
-                        <h3>Narrative Design</h3>
-                        <p>Character-driven stories with branching choices and meaningful outcomes.</p>
-                    </div>
-                    <div class="feature">
-                        <h3>Cross-Platform</h3>
-                        <p>Unity-based builds for iOS, Android and PC — fast iteration and wide reach.</p>
-                    </div>
-                    <div class="feature">
-                        <h3>Live Ops & Monetization</h3>
-                        <p>Data-driven events, ad integration and fair in-app purchase systems.</p>
-                    </div>
-                </div>
-
-                <div class="games-list" id="games" aria-labelledby="games-title">
-                    <h3 id="games-title" style="margin:0;color:#cfe8ff">Selected Projects</h3>
-
-                    <div class="game">
-                        <strong>Story Match</strong> — A hybrid match-3 + visual novel experience with
-                        character progression and episodic storytelling.
-                    </div>
-
-                    <div class="game">
-                        <strong>Tile Romance</strong> — Casual puzzle game wrapped in a light romance narrative.
-                    </div>
-
-                    <div class="game">
-                        <strong>Mini Arcade Suite</strong> — Collection of short addictive arcade games optimized for mobile.
-                    </div>
-                </div>
-            </section>
-
-            <aside class="card side" id="contact" aria-labelledby="contact-title">
-                <div class="contact">
-                    <div>
-                        <h3 id="contact-title" style="margin:0 0 8px 0;color:#fff">Get in touch</h3>
-                        <div class="muted">Business inquiries · partnerships · Press</div>
-                        <div style="margin-top:12px">
-                            <a class="btn" href="mailto:mean.dfvqw@gmail.com">Email: mean.dfvqw@gmail.com</a>
-                        </div>
-                    </div>
-
-                    <div style="margin-top:18px">
-                        <h4 style="margin:0 0 8px 0;color:#fff">What we offer</h4>
-                        <ul class="muted" style="padding-left:16px;margin:0 0 0 8px;line-height:1.7">
-                            <li>Full-cycle game development</li>
-                            <li>Art & UI design</li>
-                            <li>Backend & LiveOps</li>
-                            <li>QA & certification</li>
-                        </ul>
-                    </div>
-
-                    <div style="margin-top:18px">
-                        <h4 style="margin:0 0 8px 0;color:#fff">Careers</h4>
-                        <p class="muted" style="margin:0">We’re hiring designers, engineers and artists. Email a resume to the contact above.</p>
-                    </div>
-
-                </div>
-            </aside>
-        </main>
-
-        <footer>
-            © <span id="year"></span> Dynamic Aviation Group, Inc — All rights reserved.
-        </footer>
-    </div>
-
-    <script>
-    // Set current year
-    document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
-</body>
-</html>
+    /* Responsive */
+    @media (max-width:880px){
+      .
